2016-01-18  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/search.py (SearchDict): wrote search dictionary
	to search for Titles based on sub-strings from the existing titles
	and abbreviations.

2016-01-17  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/journalEntry.py: Fixed a few typos and
	mistakes. These were found while trying to enter journal
	information.

2016-01-16  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/xml/journalfile.xsd: removed requirement for
	a name of a publisher. Added option for OCLC number in designators

2016-01-09  Jim Fowler  <jrf@Biblion>

	* Tools/Bookentry/designer/ui_JournalEntry.ui: added Designator
	text edit box to tab order.

	* Tools/bookentry/: fixed mistakes and typos in ../jounrals,
	journalEntry.py and journalFile.py. Tested successfully.

2016-01-08  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/journalWin.py (JournalEntry.DisplayToEntry):
	Modified EntryToDisplay() and DisplayToEntry() to accomodate
	changes in ui_JournalEntry.ui.

	* Tools/bookentry/designer/ui_JournalEntry.ui: Removed subTitle
	and subsubTitle textEdit boxes and added Designator textEdit.

	* Tools/bookentry/journalEntry.py (journalEntry.blankEntry):
	Removed ADSdesignator and ISSN entries and added Designators as a
	dictionary. Modifed write_XML_from_Entry() and read_XML_to_Entry()
	to accomodate these changes

2016-01-07  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/xml/JournalFile_test.xml: modified to support
	new journalfile.xsd.

	* Tools/bookentry/xml/journalfile.xsd: Added Designators element
	and moved ISSN and ADSDesignator under it.  Changed ADSDesignator
	to ADS_Bibcode.

2016-01-05  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/journalWin.py (JournalEntry.setFocusChanged):
	Connected symbol table to edit boxes.

2016-01-03  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/journalWin.py (JournalEntry): Got the journal
	program working, I think.  Will need some more testing with edge
	cases.
